[project]
name = "ros-docker"
version = "0.2.0"
description = "Generate Docker environments for various ROS (Robot Operating System) distributions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.5",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
]
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
